feat: Remove build method
The build method is not longer useful since we will use flyway to handle
changes and new places and branches.

Signed-off-by: Arturo Volpe <arturovolpe@gmail.com>